# Python-Quiz-app

./: .gitignore  README.md  pyproject.toml  quiz.py  requirements.txt
