[project]
name = "growth-mindset"
version = "0.1.0"
description = "Python Quiz Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.42.2",
    "reportlab>=4.0.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
builds-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "growth-mindset"
version = "0.1.0"
packages = [
    { include = "quiz.py" }
]
